# rugo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yaml  docker-compose.yml  example.env  flake.nix  justfile  prometheus.yml
.sqlx/: query-048ab2e31688f75a6537b766809914b230b206c5c18baf2b4551ade875573488.json  query-140574ea22c2979d9fe623907e7bb1a65dfbe0d02ed06045842960c8bd45143a.json  query-1cc4fe492b6f28ff5379e15f3f35831b166f3bf8f573877c578fb12a1fa74414.json  query-1d422ad114fc7e2cba35eb5215e87a195d990b4c7710d35dded9d101fb6bafff.json  query-277702543b675cb38239608acaae98b9d2255b3b9cb8e3ca9699d5b79de3df66.json  query-3220f23e0c677302165b8bf0d39ab5da8419132e4d2d8301aa27b3a974702c1b.json  query-341f2de829284d39fe1b9b850e2490527d8c8ab9ec9abde1e991a2dcfba97fd4.json  query-3f91a65de9ed372d5462e27f91b8762568d2edfb15af22a3f4fddb6fab8402dc.json  (+17 more)
crates/business/: Cargo.toml
crates/business/src/: lib.rs
crates/business/src/application/: error.rs  mod.rs
crates/business/src/application/common/services/: session_service.rs
crates/business/src/application/link/: error.rs  mod.rs  workers.rs
crates/business/src/application/link/services/: link_provider_impl.rs  mod.rs
crates/business/src/application/link/use_cases/: mod.rs
crates/business/src/application/link/use_cases/get_link/: dtos.rs  interactor.rs  mod.rs  request.rs
crates/business/src/application/link/use_cases/get_user_links/: interactor.rs  mod.rs  response.rs
crates/business/src/application/link/use_cases/post_link/: dtos.rs  interactor.rs  mod.rs
crates/business/src/application/link_analytics/: mod.rs  workers.rs
crates/business/src/application/link_analytics/use_cases/: mod.rs
crates/business/src/application/link_analytics/use_cases/get_link_stats/: interactor.rs  mod.rs  response.rs
crates/business/src/application/user/: error.rs  mod.rs
crates/business/src/application/user/common/: auth_response.rs  mod.rs  user_profile_response.rs
crates/business/src/application/user/dtos/: auth_response.rs  user_profile_response.rs
crates/business/src/application/user/services/: mod.rs  session_service.rs  token_service.rs
crates/business/src/application/user/use_cases/: mod.rs
crates/business/src/application/user/use_cases/get_me/: command.rs  interactor.rs  mod.rs
crates/business/src/application/user/use_cases/login/: interactor.rs  mod.rs  request.rs
crates/business/src/application/user/use_cases/logout/: dtos.rs  interactor.rs  mod.rs  request.rs
crates/business/src/application/user/use_cases/refresh/: dtos.rs  interactor.rs  mod.rs
crates/business/src/application/user/use_cases/register/: interactor.rs  mod.rs  request.rs
crates/business/src/domain/: mod.rs
crates/business/src/domain/common/: error.rs  mod.rs
crates/business/src/domain/common/events/: analytics_event.rs  mod.rs
crates/business/src/domain/common/services/: analytics_queue.rs  link_provider.rs  mod.rs  password_services.rs
crates/business/src/domain/common/value_objects/: hashed_password.rs  mod.rs  original_link.rs  user_id.rs
crates/business/src/domain/link/: entities.rs  error.rs  repositories.rs
crates/business/src/domain/link/services/: mod.rs  short_code_services.rs
crates/business/src/domain/link/value_objects/: mod.rs  original_link.rs  short_code.rs
crates/business/src/domain/link_analytics/: entities.rs  error.rs  mod.rs  repositories.rs  services.rs
crates/business/src/domain/link_analytics/value_objects/: analytics_dimension.rs  geo_data.rs  mod.rs  stat_item.rs  time_series_point.rs  user_agent.rs
crates/business/src/domain/user/: entities.rs  entity.rs  error.rs  mod.rs  repositories.rs  repository.rs
crates/business/src/domain/user/services/: password_service.rs  password_services.rs
crates/business/src/domain/user/value_objects/: email.rs  hashed_password.rs  login_identifier.rs  mod.rs  password.rs  user_id.rs  user_status.rs  username.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: db.rs  lib.rs  main.rs  redis.rs
crates/infrastructure/src/common/security/: mock_password_services.rs  mod.rs  password_services.rs
crates/infrastructure/src/link/: mod.rs  runner.rs
crates/infrastructure/src/link/migrations/: 20260101000000_init_link.sql
crates/infrastructure/src/link/persistence/: cache_aside_link_repository.rs  mock_repositories.rs  mod.rs  models.rs  postgres_link_repository.rs  redis_link_repository.rs
crates/infrastructure/src/link/security/: mock_password_services.rs  mod.rs
crates/infrastructure/src/link/services/: mock_short_code_services.rs  mod.rs  short_code_services.rs
crates/infrastructure/src/link_analytics/: mod.rs  runner.rs
crates/infrastructure/src/link_analytics/persistence/: mock_repositories.rs  mod.rs  models.rs  postgres_analytics_repository.rs
crates/infrastructure/src/link_analytics/services/: mock_geo_service.rs  mock_services.rs  mod.rs  mpsc_analytics_queue.rs  woothee_parser.rs
crates/infrastructure/src/user/: mod.rs
crates/infrastructure/src/user/http/: error.rs  handlers.rs  mod.rs
crates/infrastructure/src/user/migrations/: 20260101000000_init_user.sql
crates/infrastructure/src/user/persistence/: db.rs  mock_repositories.rs  mod.rs  models.rs  postgres_repositories.rs  postgres_session_repository.rs  postgres_user_repository.rs
crates/infrastructure/src/user/security/: jwt_service.rs  mock_password_services.rs  mock_session_service.rs  mock_token_service.rs  mod.rs  password_services.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: error.rs  lib.rs  openapi.rs
crates/presentation/src/common/: middleware.rs
crates/presentation/src/link/: handlers.rs  mod.rs  routes.rs
crates/presentation/src/link_analytics/: handlers.rs  mod.rs  routes.rs
crates/presentation/src/user/: handlers.rs  mod.rs  routes.rs
crates/presentation/src/user/http/: error.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
migrations/: 20250101000000_schema.sql  (+3 more)
(+8 files in other folders)
