[workspace]
resolver = "3"
members = ["crates/business", "crates/infrastructure", "crates/presentation"]

[workspace.package]
authors = ["Thong Tue Duong <tueduong005@gmail.com>"]
version = "0.1.0"
edition = "2024"

[package]
name = "rugo"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
business = { path = "crates/business"}
infrastructure = { path = "crates/infrastructure" }
presentation = { path = "crates/presentation" }

axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
