[workspace]
resolver = "3"
members = ["crates/business", "crates/infrastructure", "crates/presentation"]

[workspace.package]
authors = ["Thong Tue Duong <tueduong005@gmail.com>"]
edition = "2024"
license = "MIT"
version = "0.1.0"

[package]
name = "rugo"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
business = { path = "crates/business" }
infrastructure = { path = "crates/infrastructure" }
presentation = { path = "crates/presentation" }

axum = "0.8.8"
dotenvy = "0.15.7"
sqlx = "0.8.6"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
