[package]
name = "business"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_trim = "1.1.0"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
