[package]
name = "business"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_trim = "1.1.0"
thiserror = "2.0.18"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
