[package]
name = "infrastructure"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
business ={ path = "../business" }

async-trait = "0.1.89"
zxcvbn = "3.1.0"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
base64 = "0.22.1"
