[package]
name = "presentation"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
business = { path = "../business", features = ["openapi"] }

async-trait = "0.1.89"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = "0.20.0"
